--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,19 @@
 /* src/components/Footer.css */
 
+.footer {
+  background-color: #333;
+  /* Cor de fundo do footer */
+  color: #fff;
+  /* Cor do texto */
+  padding: 30px 0;
+  /* Espaçamento */
+  text-align: center;
+  /* Centraliza o texto */
+  margin-top: 50px;
+  /* Margem superior */
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+  /* Sombra para profundidade */
+}
 
 .footer-content {
   max-width: 1200px;
