--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -72,28 +72,29 @@
 }
 
 .hero-image {
-  max-width: 30%;
-  /* Reduzindo para equilibrar com o texto */
+  width: 50%;
+  /* Definindo largura diretamente */
+  max-width: 50%;
+  /* Limitar a largura máxima */
   display: flex;
-  /* Flexbox para centralização */
   justify-content: center;
   align-items: center;
   transition: transform 0.3s ease-in-out;
-  /* Transição suave */
 }
 
 .hero-image img {
-  width: 100%;
-  /* Ajustando para caber no card */
+  width: 45%;
+  /* A imagem ocupa toda a largura do contêiner */
   height: auto;
   /* Mantém a proporção da imagem */
   border-radius: 10px;
-  /* Bordas arredondadas na imagem */
+  /* Bordas arredondadas */
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
   /* Sombra na imagem */
   animation: fadeIn 1.5s ease-in-out;
   /* Animação ao aparecer */
 }
+
 
 .hero-image:hover img {
   transform: scale(1.05);
